<resources>
    <string name="app_name">FilterKhor</string>
    <string name="action_settings">Settings</string>

    <string name="service_state_up">Working</string>
    <string name="service_state_down">Not Working</string>

    <string name="settings_group_collapse">Close</string>

    <string name="settings_heading_data_use">Data Use &amp; Syncing</string>
    <string name="settings_data_syncing">Sync frequency</string>
    <string name="settings_data_syncing_manual_only">Manual</string>
    <string name="settings_data_syncing_automatic_running">Automatic when app is running\nSync while I have the app open</string>
    <string name="settings_data_syncing_automatic_background">Automatic in background\nSync anytime my phone has internet connection</string>
    <string name="settings_data_sync_network">Sync network</string>
    <string name="settings_data_sync_network_wifi">Over WiFi only</string>
    <string name="settings_data_sync_network_all">Over WiFi and mobile networks</string>

    <string name="updated_never">Never updated</string>
    <string name="updated_recently">Updated less than a minute ago</string>
    <string name="updated_minutes">Updated %1$d minutes ago</string>
    <string name="updated_minute">Updated %1$d minute ago</string>
    <string name="updated_hours">Updated %1$d hours ago</string>
    <string name="updated_hour">Updated %1$d hour ago</string>
    <string name="updated_days">Updated %1$d days ago</string>
    <string name="updated_day">Updated %1$d day ago</string>

    <string name="pulldown_to_sync_no_net">No Internet connection available</string>

</resources>
